--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,5 +1,5 @@
 body {
-  background: white;
+  background: #e6ffe6;
   color: black;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
@@ -65,13 +65,15 @@ body {
 
 .navbar {
   background: #00cc66;
-  border-bottom: 1px solid black;
   height: 60px;
   left: 0;
   padding: 0 10px;
   position: fixed;
   right: 0;
   top: 0;
+  -webkit-box-shadow:0px 4px 4px #006600;
+  -moz-box-shadow:0px 4px 4px #006600;
+  box-shadow:0px 4px 4px #006600;
 }
 
 .navbar-brand {
